--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
-<h1>
-    test
-
-</h1>
+<script src="adapter.js"></script>
+<script src="kurento-client.js"></script>
+<script src="kurento-utils.js"></script>
+<script src="main.js"></script>
+<form>
+    <input type="text" id="pass" placeholder="password">
+    <input type="submit">
+</form>
+<video id="vid" autoplay muted width="100%" height="100%"></video>
