link to certificate page

--- a/index.html
+++ b/index.html
@@ -6,4 +6,5 @@
     <input type="text" id="pass" placeholder="password">
     <input type="submit">
 </form>
+<a style="display:none;" href="https://kurento.jsconsole.net:8433/kurento">Visit this page first and tell your browser to trust it. Then come back here.</a>
 <video id="vid" autoplay muted width="95%" height="95%"></video>
